# FastMeasure

./: .gitmodules  CMakeLists.txt
app/: CMakeLists.txt  main.cpp
app/Communication/: ChannelDevice.h  FullScanFilter.cpp  SimpleSocket.h  StatTimer.h  common.h  list_ports_linux.cpp  ord_lidar_driver.cpp  ord_lidar_driver.h  serial.h  unix_serial.h
app/FastMeasure/: Application.cpp  Application.h  fastmeasurepch.h
app/FastMeasure/Algorithm/: FindLines.cpp  FindLines.h  HoughTransform.cpp  HoughTransform.h
app/FastMeasure/Core/Layers/: Layer.h  LayerStack.cpp  LayerStack.h
app/FastMeasure/Display/: DisplayData.cpp  DisplayData.h
app/FastMeasure/EmbededPlatform/: LidarReadLayer.cpp  LidarReadLayer.h
app/FastMeasure/UI/: UI.cpp  UI.h  logo.h  widgets.h
libs/: CMakeLists.txt
libs/imgui-cmake/: CMakeLists.txt  imgui-SFML.cpp
